create the banner part

--- a/index.html
+++ b/index.html
@@ -100,5 +100,35 @@
         </div>
       </nav>
     </header>
+
+    <body>
+      <!-- banner  -->
+      <section class="py-8 px-4 lg:pt-[100px] lg:pb-[140px]">
+        <div class="max-w-[1320px] mx-auto relative">
+          <div class="relative z-10 lg:w-[681px]">
+            <h2
+              class="font-ADLaM text-[30px] leading-11 md:text-[56px] font-normal md:leading-[67px] text-[rgba(17,17,17,1)] text-left mb-4 typing"
+            >
+              Pamper Your Pet, Because They Deserve the Bes
+            </h2>
+            <p
+              class="font-sora text-sm leading-5 md:text-[20px] font-normal md:leading-[36px] text-[rgba(17,17,17,1)] text-left opacity-70 mb-4"
+            >
+              Discover a world of treats, toys, and essentials handpicked for
+              your furry friends. Shop now and make tails wag with joy!
+            </p>
+            <button
+              class="border border-[rgba(255,220,38,1)] rounded-[8px] bg-[var(--color-primary)] px-7 py-2 text-[16px] font-sora animate-bounce"
+            >
+              Find a pet
+            </button>
+          </div>
+
+          <div class="relative z-0 mt-[-90px] lg:mt-[-400px]">
+            <img src="./c1-assets/cat-big.png" alt="banner-img" />
+          </div>
+        </div>
+      </section>
+    </body>
   </body>
 </html>
