--- a/index.html
+++ b/index.html
@@ -129,6 +129,102 @@
           </div>
         </div>
       </section>
+
+      <!-- categories  -->
+
+      <section class="px-4 lg:max-w-[1320px] mx-auto">
+        <h1
+          class="text-2xl mb-8 text-[rgba(17,17,17,1)] md:text-[36px] font-normal leading-[43px] text-left font-ADLaM md:mb-12"
+        >
+          Browse By Categories
+        </h1>
+        <div
+          class="grid grid-cols-2 gap-2 md:grid-cols-3 md:gap-3 lg:grid-cols-6 lg:gap-1 mb-32"
+        >
+          <div
+            class="rounded-[12px] bg-[rgba(249,223,138,1)] w-full lg:w-[180px] h-[200px] flex justify-center items-center flex-col"
+          >
+            <div class="bg-[rgba(255,255,255,1)] rounded-full p-5 mb-5">
+              <img
+                class="w-12 h-12"
+                src="./c1-assets/dog-cartoon.png"
+                alt="dog"
+              />
+            </div>
+            <h1 class="font-ADLaM text-[rgba(0,0,0,1)] text-xl mb-2">Dog</h1>
+            <p class="font-sora text-sm">3 items</p>
+          </div>
+
+          <div
+            class="rounded-[12px] bg-[rgba(249,223,138,1)] w-full lg:w-[180px] h-[200px] flex justify-center items-center flex-col"
+          >
+            <div class="bg-[rgba(255,255,255,1)] rounded-full p-5 mb-5">
+              <img
+                class="w-12 h-12"
+                src="./c1-assets/fish-cartoon.png"
+                alt="fish"
+              />
+            </div>
+            <h1 class="font-ADLaM text-[rgba(0,0,0,1)] text-xl mb-2">Fish</h1>
+            <p class="font-sora text-sm">3 items</p>
+          </div>
+
+          <div
+            class="rounded-[12px] bg-[rgba(249,223,138,1)] w-full lg:w-[180px] h-[200px] flex justify-center items-center flex-col"
+          >
+            <div class="bg-[rgba(255,255,255,1)] rounded-full p-5 mb-5">
+              <img
+                class="w-12 h-12"
+                src="./c1-assets/cat-cartoon.png"
+                alt="cat"
+              />
+            </div>
+            <h1 class="font-ADLaM text-[rgba(0,0,0,1)] text-xl mb-2">Cat</h1>
+            <p class="font-sora text-sm">3 items</p>
+          </div>
+          <div
+            class="rounded-[12px] bg-[rgba(249,223,138,1)] w-full lg:w-[180px] h-[200px] flex justify-center items-center flex-col"
+          >
+            <div class="bg-[rgba(255,255,255,1)] rounded-full p-5 mb-5">
+              <img
+                class="w-12 h-12"
+                src="./c1-assets/bird-cartoon.png"
+                alt="birds"
+              />
+            </div>
+            <h1 class="font-ADLaM text-[rgba(0,0,0,1)] text-xl mb-2">Birds</h1>
+            <p class="font-sora text-sm">3 items</p>
+          </div>
+          <div
+            class="rounded-[12px] bg-[rgba(249,223,138,1)] w-full lg:w-[180px] h-[200px] flex justify-center items-center flex-col"
+          >
+            <div class="bg-[rgba(255,255,255,1)] rounded-full p-5 mb-5">
+              <img
+                class="w-12 h-12"
+                src="./c1-assets/cute-pet-small.png"
+                alt="small-pet"
+              />
+            </div>
+            <h1 class="font-ADLaM text-[rgba(0,0,0,1)] text-xl mb-2">
+              Small Pet
+            </h1>
+            <p class="font-sora text-sm">3 items</p>
+          </div>
+          <div
+            class="rounded-[12px] bg-[rgba(249,223,138,1)] w-full lg:w-[180px] h-[200px] flex justify-center items-center flex-col"
+          >
+            <div class="bg-[rgba(255,255,255,1)] rounded-full p-5 mb-5">
+              <img
+                class="w-12 h-12"
+                src="./c1-assets/rabbit-cartoon.png"
+                alt="rabbit"
+              />
+            </div>
+            <h1 class="font-ADLaM text-[rgba(0,0,0,1)] text-xl mb-2">Rabbit</h1>
+            <p class="font-sora text-sm">3 items</p>
+          </div>
+        </div>
+      </section>
     </body>
   </body>
 </html>
