--- a/index.html
+++ b/index.html
@@ -225,6 +225,261 @@
           </div>
         </div>
       </section>
+
+      <!-- pet products  -->
+
+      <section class="bg-[rgba(255,249,244,1)] px-4 md:py-36">
+        <div class="max-w-[1320px] mx-auto">
+          <h1
+            class="text-2xl mb-8 text-[rgba(17,17,17,1)] md:text-[36px] font-normal leading-[43px] text-left font-ADLaM md:mb-12"
+          >
+            Trending Pet Products
+          </h1>
+
+          <div
+            class="grid grid-cols-2 lg:grid-cols-5 lg:auto-rows-[120px] gap-6"
+          >
+            <!-- card 1  -->
+            <div
+              class="rounded-xl bg-[rgba(249,223,138,1)] px-6 pt-10 h-auto w-full col-span-2 row-span-2 md:col-span-2 md:row-span-3"
+            >
+              <div>
+                <h1 class="font-ADLaM text-3xl text-left mb-6">
+                  T- Shirt For Dogs
+                </h1>
+                <p
+                  class="font-sora text-[rgba(17,17,17,0.7)] text-sm leading-[20px] mb-4"
+                >
+                  Discover a world of treats, toys, and <br />
+                  essentials handpicked for
+                </p>
+                <button
+                  class="border border-white rounded-[8px] bg-white px-7 py-2 text-[16px] font-sora"
+                >
+                  Shop Now
+                </button>
+              </div>
+              <div class="mt-[-126px] ml-[112px] md:ml-[415px] lg:ml-[218px]">
+                <img
+                  class="w-60 h-80"
+                  src="./c1-assets/cute-pet-small.png"
+                  alt="dog"
+                />
+              </div>
+            </div>
+
+            <!-- card 2 to 9  -->
+
+            <div
+              class="border border-[rgba(17,17,17,0.1)] rounded-xl bg-white p-4 h-28 flex items-center gap-4 md:gap-3"
+            >
+              <div class="rounded-xl bg-[rgba(255,249,244,1)] p-2 md:p-5">
+                <img
+                  class="w-8 h-8 md:w-[48px] md:h-[48px]"
+                  src="./c1-assets/dog-cartoon.png"
+                  alt="dog"
+                />
+              </div>
+              <div>
+                <p class="font-sora text-sm font-medium mb-1 text-left">
+                  <i class="fa-solid fa-star text-[rgba(255,193,7,1)] mr-2"></i>
+                  4.5
+                </p>
+                <h1
+                  class="font-sora text-[rgba(0,0,0,1)] text-sm md:text-xl font-medium text-left mb-1"
+                >
+                  Pet Bed
+                </h1>
+                <p class="font-sora text-sm font-medium text-left">$39.99</p>
+              </div>
+            </div>
+            <div
+              class="border border-[rgba(17,17,17,0.1)] rounded-xl bg-white p-4 h-28 flex items-center gap-4 md:gap-3"
+            >
+              <div class="rounded-xl bg-[rgba(255,249,244,1)] p-5">
+                <img
+                  class="w-8 h-8 md:w-[48px] md:h-[48px]"
+                  src="./c1-assets/fish-cartoon.png"
+                  alt="fish"
+                />
+              </div>
+              <div>
+                <p class="font-sora text-sm font-medium mb-1 text-left">
+                  <i class="fa-solid fa-star text-[rgba(255,193,7,1)] mr-2"></i>
+                  4.5
+                </p>
+                <h1
+                  class="font-sora text-[rgba(0,0,0,1)] text-sm md:text-xl font-medium text-left mb-1"
+                >
+                  Pet Bed
+                </h1>
+                <p class="font-sora text-sm font-medium text-left">$39.99</p>
+              </div>
+            </div>
+            <div
+              class="border border-[rgba(17,17,17,0.1)] rounded-xl bg-white p-4 h-28 flex items-center gap-4 md:gap-3"
+            >
+              <div class="rounded-xl bg-[rgba(255,249,244,1)] p-5">
+                <img
+                  class="w-8 h-8 md:w-[48px] md:h-[48px]"
+                  src="./c1-assets/bird-cartoon.png"
+                  alt="bird"
+                />
+              </div>
+              <div>
+                <p class="font-sora text-sm font-medium mb-1 text-left">
+                  <i class="fa-solid fa-star text-[rgba(255,193,7,1)] mr-2"></i>
+                  4.5
+                </p>
+                <h1
+                  class="font-sora text-[rgba(0,0,0,1)] text-sm md:text-xl font-medium text-left mb-1"
+                >
+                  Pet Bed
+                </h1>
+                <p class="font-sora text-sm font-medium text-left">$39.99</p>
+              </div>
+            </div>
+            <div
+              class="border border-[rgba(17,17,17,0.1)] rounded-xl bg-white p-4 h-28 flex items-center gap-4 md:gap-3"
+            >
+              <div class="rounded-xl bg-[rgba(255,249,244,1)] p-5">
+                <img
+                  class="w-8 h-8 md:w-[48px] md:h-[48px]"
+                  src="./c1-assets/rabbit-cartoon.png"
+                  alt="rabbit"
+                />
+              </div>
+              <div>
+                <p class="font-sora text-sm font-medium mb-1 text-left">
+                  <i class="fa-solid fa-star text-[rgba(255,193,7,1)] mr-2"></i>
+                  4.5
+                </p>
+                <h1
+                  class="font-sora text-[rgba(0,0,0,1)] text-sm md:text-xl font-medium text-left mb-1"
+                >
+                  Pet Bed
+                </h1>
+                <p class="font-sora text-sm font-medium text-left">$39.99</p>
+              </div>
+            </div>
+            <div
+              class="border border-[rgba(17,17,17,0.1)] rounded-xl bg-white p-4 h-28 flex items-center gap-4 md:gap-3"
+            >
+              <div class="rounded-xl bg-[rgba(255,249,244,1)] p-5">
+                <img
+                  class="w-8 h-8 md:w-[48px] md:h-[48px]"
+                  src="./c1-assets/bird-cartoon.png"
+                  alt="bird"
+                />
+              </div>
+              <div>
+                <p class="font-sora text-sm font-medium mb-1 text-left">
+                  <i class="fa-solid fa-star text-[rgba(255,193,7,1)] mr-2"></i>
+                  4.5
+                </p>
+                <h1
+                  class="font-sora text-[rgba(0,0,0,1)] text-sm md:text-xl font-medium text-left mb-1"
+                >
+                  Pet Bed
+                </h1>
+                <p class="font-sora text-sm font-medium text-left">$39.99</p>
+              </div>
+            </div>
+            <div
+              class="border border-[rgba(17,17,17,0.1)] rounded-xl bg-white p-4 h-28 flex items-center gap-4 md:gap-3"
+            >
+              <div class="rounded-xl bg-[rgba(255,249,244,1)] p-5">
+                <img
+                  class="w-8 h-8 md:w-[48px] md:h-[48px]"
+                  src="./c1-assets/pet-couch.png"
+                  alt="couch"
+                />
+              </div>
+              <div>
+                <p class="font-sora text-sm font-medium mb-1 text-left">
+                  <i class="fa-solid fa-star text-[rgba(255,193,7,1)] mr-2"></i>
+                  4.5
+                </p>
+                <h1
+                  class="font-sora text-[rgba(0,0,0,1)] text-sm md:text-xl font-medium text-left mb-1"
+                >
+                  Pet Bed
+                </h1>
+                <p class="font-sora text-sm font-medium text-left">$39.99</p>
+              </div>
+            </div>
+            <div
+              class="border border-[rgba(17,17,17,0.1)] rounded-xl bg-white p-4 h-28 flex items-center gap-4 md:gap-3"
+            >
+              <div class="rounded-xl bg-[rgba(255,249,244,1)] p-5">
+                <img
+                  class="w-8 h-8 md:w-[48px] md:h-[48px]"
+                  src="./c1-assets/fish-cartoon.png"
+                  alt="fish"
+                />
+              </div>
+              <div>
+                <p class="font-sora text-sm font-medium mb-1 text-left">
+                  <i class="fa-solid fa-star text-[rgba(255,193,7,1)] mr-2"></i>
+                  4.5
+                </p>
+                <h1
+                  class="font-sora text-[rgba(0,0,0,1)] text-sm md:text-xl font-medium text-left mb-1"
+                >
+                  Pet Bed
+                </h1>
+                <p class="font-sora text-sm font-medium text-left">$39.99</p>
+              </div>
+            </div>
+            <div
+              class="border border-[rgba(17,17,17,0.1)] rounded-xl bg-white p-4 h-28 flex items-center gap-4 md:gap-3"
+            >
+              <div class="rounded-xl bg-[rgba(255,249,244,1)] p-5">
+                <img
+                  class="w-8 h-8 md:w-[48px] md:h-[48px]"
+                  src="./c1-assets/cat-cartoon.png"
+                  alt="cat"
+                />
+              </div>
+              <div>
+                <p class="font-sora text-sm font-medium mb-1 text-left">
+                  <i class="fa-solid fa-star text-[rgba(255,193,7,1)] mr-2"></i>
+                  4.5
+                </p>
+                <h1
+                  class="font-sora text-[rgba(0,0,0,1)] text-sm md:text-xl font-medium text-left mb-1"
+                >
+                  Pet Bed
+                </h1>
+                <p class="font-sora text-sm font-medium text-left">$39.99</p>
+              </div>
+            </div>
+            <div
+              class="border border-[rgba(17,17,17,0.1)] rounded-xl bg-white p-4 h-28 flex items-center gap-4 md:gap-3"
+            >
+              <div class="rounded-xl bg-[rgba(255,249,244,1)] p-5">
+                <img
+                  class="w-8 h-8 md:w-[48px] md:h-[48px]"
+                  src="./c1-assets/dog-cartoon.png"
+                  alt="dog"
+                />
+              </div>
+              <div>
+                <p class="font-sora text-sm font-medium mb-1 text-left">
+                  <i class="fa-solid fa-star text-[rgba(255,193,7,1)] mr-2"></i>
+                  4.5
+                </p>
+                <h1
+                  class="font-sora text-[rgba(0,0,0,1)] text-sm md:text-xl font-medium text-left mb-1"
+                >
+                  Pet Bed
+                </h1>
+                <p class="font-sora text-sm font-medium text-left">$39.99</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </body>
   </body>
 </html>
