price card added

--- a/index.html
+++ b/index.html
@@ -480,6 +480,59 @@
           </div>
         </div>
       </section>
+
+      <!-- price card  -->
+
+      <section class="max-w-[1320px] mx-auto px-4">
+        <h1
+          class="text-2xl mb-8 text-[rgba(17,17,17,1)] md:text-[36px] font-normal leading-[43px] text-left font-ADLaM md:mb-12"
+        >
+          Everyday low Price
+        </h1>
+
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-36">
+          <div
+            class="md:col-span-2 flex justify-between items-center px-12 rounded-xl bg-[linear-gradient(134.71deg,rgba(248,204,251,1)_1.272%,rgba(172,210,253,1)_100%)] pb-3"
+          >
+            <div>
+              <p class="font-ADLaM text-sm leading-[29px] text-left">
+                Under Price
+              </p>
+              <h1 class="font-ADLaM text-black text-3xl text-left mb-2">
+                Pet Grooming Mitt
+              </h1>
+              <p class="text-white font-ADLaM text-sm leading-[29px] text-left">
+                (Easy Hair Removal)
+              </p>
+              <h3
+                class="font-ADLaM text-left text-black text-6xl leading-[67px]"
+              >
+                $7.99
+              </h3>
+            </div>
+            <div>
+              <img src="./c1-assets/cute-dog-mid.png" alt="pet-dog" />
+            </div>
+          </div>
+          <div
+            class="px-12 pt-10 rounded-xl bg-[linear-gradient(134.71deg,rgba(255,249,244,1)_1.272%,rgba(249,223,138,1)_100%)]"
+          >
+            <div>
+              <h1 class="font-ADLaM text-3xl text-left mb-2">
+                T-Shirt for Dogs
+              </h1>
+              <h3
+                class="font-ADLaM text-left text-[var(--color-primary)] text-6xl leading-[67px]"
+              >
+                $7.99
+              </h3>
+            </div>
+            <div>
+              <img src="./c1-assets/cute-pet-mid.png" alt="pet-dog" />
+            </div>
+          </div>
+        </div>
+      </section>
     </body>
   </body>
 </html>
