create the review section

--- a/index.html
+++ b/index.html
@@ -482,6 +482,182 @@
         </div>
       </section>
 
+      <!-- review  -->
+
+      <section class="max-w-[1320px] mx-auto px-4 my-4 md:mb-36">
+        <div class="grid grid-cols-1 md:grid-cols-3 md:items-center gap-3">
+          <div>
+            <p class="font-sora text-sm leading-[29px] text-left">
+              Review & Awards
+            </p>
+            <h1
+              class="font-ADLaM text-2xl mb-8 text-[rgba(17,17,17,1)] md:text-[36px] font-normal leading-[43px] text-left font-ADLaM md:mb-6"
+            >
+              Customers Reviews
+            </h1>
+            <p
+              class="font-sora text-[rgba(17,17,17,0.7)] text-sm leading-[20px] mb-4"
+            >
+              Real stories from happy pet parents who trust our products for
+              their furry friends’ comfort and care.
+            </p>
+          </div>
+          <div class="bg-[var(--color-secondary)] rounded-lg md:col-span-2">
+            <div class="carousel w-full">
+              <div id="slide1" class="carousel-item relative w-full">
+                <div class="flex justify-between items-center gap-4 p-4">
+                  <div class="flex flex-col items-center gap-2">
+                    <img
+                      class="rounded-full"
+                      src="./c1-assets/avatar1.jpg"
+                      alt="avatar1"
+                    />
+                    <h1
+                      class="font-sora text-[rgba(0,0,0,1)] text-sm md:text-xl font-medium text-left"
+                    >
+                      John Alvy
+                    </h1>
+                    <p class="font-sora text-sm font-medium text-left">
+                      Engineer
+                    </p>
+                  </div>
+                  <div class="flex flex-col gap-4">
+                    <div>
+                      <i
+                        class="fa-solid fa-star text-[rgba(255,193,7,1)] mr-2"
+                      ></i>
+                      <i
+                        class="fa-solid fa-star text-[rgba(255,193,7,1)] mr-2"
+                      ></i>
+                      <i
+                        class="fa-solid fa-star text-[rgba(255,193,7,1)] mr-2"
+                      ></i>
+                      <i
+                        class="fa-solid fa-star text-[rgba(255,193,7,1)] mr-2"
+                      ></i>
+                      <i
+                        class="fa-solid fa-star text-[rgba(255,193,7,1)] mr-2"
+                      ></i>
+                    </div>
+                    <p class="font-sora text-xl font-medium text-left">
+                      "These are the perfect size for our small dog. The design
+                      is cute and the rubber on the bottom is great because it
+                      makes them more durable. They’ve held up to being..."
+                    </p>
+                  </div>
+                </div>
+                <div
+                  class="absolute left-2 right-2 top-1/2 flex -translate-y-1/2 transform justify-between"
+                >
+                  <a href="#slide3" class="btn btn-circle">❮</a>
+                  <a href="#slide2" class="btn btn-circle">❯</a>
+                </div>
+              </div>
+              <div id="slide2" class="carousel-item relative w-full">
+                <div class="flex justify-between items-center gap-4 p-4">
+                  <div class="flex flex-col items-center gap-2">
+                    <img
+                      class="rounded-full"
+                      src="./c1-assets/avatar2.jpg"
+                      alt="avatar2"
+                    />
+                    <h1
+                      class="font-sora text-[rgba(0,0,0,1)] text-sm md:text-xl font-medium text-left"
+                    >
+                      Waylan S
+                    </h1>
+                    <p class="font-sora text-sm font-medium text-left">
+                      Cat Owner Engineer
+                    </p>
+                  </div>
+                  <div class="flex flex-col gap-4">
+                    <div>
+                      <i
+                        class="fa-solid fa-star text-[rgba(255,193,7,1)] mr-2"
+                      ></i>
+                      <i
+                        class="fa-solid fa-star text-[rgba(255,193,7,1)] mr-2"
+                      ></i>
+                      <i
+                        class="fa-solid fa-star text-[rgba(255,193,7,1)] mr-2"
+                      ></i>
+                      <i
+                        class="fa-solid fa-star text-[rgba(255,193,7,1)] mr-2"
+                      ></i>
+                      <i
+                        class="fa-solid fa-star text-[rgba(255,193,7,1)] mr-2"
+                      ></i>
+                    </div>
+                    <p class="font-sora text-xl font-medium text-left">
+                      "This is simply unbelievable! Pet shop did exactly what
+                      you said it does. I'm good to go. Pet shop is great. One
+                      cats horrid breath...gone! One cat from a bit 'toround' to
+                      almost perfect weight."
+                    </p>
+                  </div>
+                </div>
+                <div
+                  class="absolute left-2 right-2 top-1/2 flex -translate-y-1/2 transform justify-between"
+                >
+                  <a href="#slide1" class="btn btn-circle">❮</a>
+                  <a href="#slide3" class="btn btn-circle">❯</a>
+                </div>
+              </div>
+              <div id="slide3" class="carousel-item relative w-full">
+                <div class="flex justify-between items-center gap-4 p-4">
+                  <div class="flex flex-col items-center gap-2">
+                    <img
+                      class="rounded-full"
+                      src="./c1-assets/avatar3.jpg"
+                      alt="avatar3"
+                    />
+                    <h1
+                      class="font-sora text-[rgba(0,0,0,1)] text-sm md:text-xl font-medium text-left"
+                    >
+                      Jack Morrison
+                    </h1>
+                    <p class="font-sora text-sm font-medium text-left">
+                      Dog Owner
+                    </p>
+                  </div>
+                  <div class="flex flex-col gap-4">
+                    <div>
+                      <i
+                        class="fa-solid fa-star text-[rgba(255,193,7,1)] mr-2"
+                      ></i>
+                      <i
+                        class="fa-solid fa-star text-[rgba(255,193,7,1)] mr-2"
+                      ></i>
+                      <i
+                        class="fa-solid fa-star text-[rgba(255,193,7,1)] mr-2"
+                      ></i>
+                      <i
+                        class="fa-solid fa-star text-[rgba(255,193,7,1)] mr-2"
+                      ></i>
+                      <i
+                        class="fa-solid fa-star text-[rgba(255,193,7,1)] mr-2"
+                      ></i>
+                    </div>
+                    <p class="font-sora text-xl font-medium text-left">
+                      "Thank you so much! My cat has severe food allergies and
+                      pretty much can only eat rabbit, apples, and chicken. This
+                      is the only way I can feed her without her throwing up all
+                      the time and chewing her fur out."
+                    </p>
+                  </div>
+                </div>
+                <div
+                  class="absolute left-2 right-2 top-1/2 flex -translate-y-1/2 transform justify-between"
+                >
+                  <a href="#slide2" class="btn btn-circle">❮</a>
+                  <a href="#slide1" class="btn btn-circle">❯</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
       <!-- price card  -->
 
       <section class="max-w-[1320px] mx-auto px-4">
